--- a/app/src/main/res/layout/ke_g_o_widget.xml
+++ b/app/src/main/res/layout/ke_g_o_widget.xml
@@ -2,33 +2,47 @@
               android:orientation="vertical"
               style="@style/Widget.KeGOWidget.AppWidget.Container"
               android:theme="@style/Theme.KeGOWidget.AppWidgetContainer"
-              android:background="@color/purple_200"
+              android:id="@+id/layout_wrapper"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <TextView
             style="@style/Widget.KeGOWidget.AppWidget.InnerView"
             android:id="@+id/appwidget_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/appwidget_text"
+            android:textAlignment="center"
+            android:text="@string/appwidget_title"
             android:textSize="24sp"
             android:textStyle="bold|italic"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/appwidget_text"/>
-
+            android:layout_margin="8dp"/>
+    <TextView
+            style="@style/Widget.KeGOWidget.AppWidget.InnerView"
+            android:id="@+id/appwidget_timer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="bold|italic"
+            android:layout_marginTop="-12dp"
+            android:layout_marginHorizontal="8dp"/>
     <TextView
             style="@style/Widget.KeGOWidget.AppWidget.InnerView"
             android:id="@+id/appwidget_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="@string/appwidget_text"
+            android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold|italic"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/appwidget_text"/>
+            android:layout_marginTop="0dp"
+            android:layout_marginHorizontal="8dp"/>
+    <Button
+            android:id="@+id/rndm_btn"
+            android:text="@string/rndm_target"
+            android:backgroundTint="@color/teal_200"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="100sp"
+            android:onClick="confirmConfiguration"
+    />
 </LinearLayout>
