--- a/app/src/main/res/xml/ke_g_o_widget_info.xml
+++ b/app/src/main/res/xml/ke_g_o_widget_info.xml
@@ -2,8 +2,8 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
                     android:minWidth="250dp"
                     android:minHeight="110dp"
-                    android:updatePeriodMillis="86400000"
-                    android:previewImage="@drawable/example_appwidget_preview"
+                    android:updatePeriodMillis="5000"
+                    android:previewImage="@drawable/myex"
                     android:initialLayout="@layout/ke_g_o_widget"
                     android:description="@string/app_widget_description"
                     android:resizeMode="horizontal|vertical"
