--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -17,7 +17,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/task_name"
-        android:layout_width="153dp"
+        android:layout_width="200dp"
         android:layout_height="65dp"
         app:boxBackgroundMode="none"
         app:hintAnimationEnabled="false"
@@ -31,8 +31,55 @@
             android:layout_height="match_parent"
             android:fontFamily="sans-serif"
             android:hint="@string/nothing"
+            android:paddingTop="5dp"
             android:textAlignment="center"
             android:textSize="30sp"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/duration"
+        android:layout_width="108dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="5dp"
+        app:boxBackgroundMode="none"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintBottom_toBottomOf="@+id/task_background"
+        app:layout_constraintEnd_toEndOf="@+id/task_background">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif"
+            android:hint="@string/nothing"
+            android:paddingTop="5dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/start_time"
+        android:layout_width="108dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginBottom="5dp"
+        app:boxBackgroundMode="none"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false"
+        app:layout_constraintBottom_toBottomOf="@+id/task_background"
+        app:layout_constraintStart_toStartOf="@+id/task_background">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="sans-serif"
+            android:hint="@string/nothing"
+            android:paddingTop="5dp"
+            android:textAlignment="center"
+            android:textSize="20sp"
             tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,12 +109,32 @@
         app:layout_constraintStart_toStartOf="@+id/task_background" />
 
     <TextView
-        android:id="@+id/end_time_text"
+        android:id="@+id/duration_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="40dp"
-        android:text="@string/end_time"
+        android:text="@string/duration_time"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/task_background" />
+
+    <TextView
+        android:id="@+id/end_time_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:text="@string/end_time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/duration_text"
+        app:layout_constraintStart_toEndOf="@+id/start_time_text" />
+
+    <TextView
+        android:id="@+id/end_time_text3"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:text="@string/time_hint"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/duration_text"
+        app:layout_constraintStart_toEndOf="@+id/start_time_text"
+        app:layout_constraintTop_toBottomOf="@+id/end_time_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
